crates/autoresolve/tests/compile_fail/scoped_base_as_top_level.stderr
error[E0271]: type mismatch resolving `<MyBase as BaseType>::Parent == ()`
  --> tests/compile_fail/scoped_base_as_top_level.rs:19:48
   |
19 |     let _resolver = autoresolve::Resolver::new(MyBase { dep: MyDep });
   |                     -------------------------- ^^^^^^^^^^^^^^^^^^^^^ type mismatch resolving `<MyBase as BaseType>::Parent == ()`
   |                     |
   |                     required by a bound introduced by this call
   |
note: expected this to be `()`
  --> tests/compile_fail/scoped_base_as_top_level.rs:11:15
   |
11 | #[base(scoped(Builtins), helper_module_exported_as = crate::my_base_helper)]
   |               ^^^^^^^^
note: required by a bound in `Resolver::<T>::new`
  --> src/resolver.rs
   |
   |     pub fn new(base: T) -> Self
   |            --- required by a bound in this associated function
   |     where
   |         T: BaseType<Parent = ()>,
   |                     ^^^^^^^^^^^ required by this bound in `Resolver::<T>::new`
